20250410/3tier-app/k8s-manifests/my-private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: kc-sfacspace.kr-central-2.kcr.dev/sfacspace/leekyz-3tier-frontend:v0.0.1
  imagePullSecrets:
  - name: lkzsecret
